@@ -1,3 +1,8 @@
+2016-08-22  c.hetherington  <cth@carlh.net>
+
+	* Fix colour tint in subtitles burnt into existing DCP
+	content.
+
 2016-08-22  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.9.14 released.
